--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -66,7 +66,6 @@
     // 서버에 패스파인딩 요청
     async function requestPathfinding() {
         try {
-            console.log('패스파인딩 요청 중...');
             console.log(`시작: (${start.row}, ${start.col}), 목표: (${end.row}, ${end.col})`);
             console.log(`그리드 크기: ${rows} x ${cols}`);
 
@@ -88,14 +87,15 @@
             });
 
             if (!response.ok) {
-                throw new Error(`HTTP error! status: ${response.status}`);
+                const errorData = await response.json();
+                console.log(response.status)
+                throw new Error(errorData.errorMessage);
             }
 
             const result = await response.json();
             const resultData = result.resultData;
             if (resultData.success && resultData.path) {
                 console.log(`경로 찾기 성공! 경로 길이: ${resultData.path.length}`);
-                console.log(`알고리즘: ${resultData.algorithm || 'Unknown'}`);
                 console.log(`실행 시간: ${resultData.executionTime || 'N/A'}ms`);
 
                 // 경로 그리기
@@ -143,8 +143,8 @@
             }
 
         } catch (error) {
-            console.error('패스파인딩 요청 실패:', error);
-            alert('서버 통신 오류가 발생했습니다.');
+            console.log(error);
+            alert(error);
         }
     }
 
